modules/wycs/tests/valid/test_type_20.wyal
assert:
    forall(int|null x):
        if:
            x == 1
        then:
            !(x is null)

assert:
    forall(int|null x):
        if:
            x != null
        then:
            !(x is null)


