modules/wycs/tests/invalid/test_018.wyal
assert:
  forall(bool x):
    x == !x
